MIR-968 fixes layout issue on small content widths, optimise close button position

--- a/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/mir_details.scss
+++ b/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/mir_details.scss
@@ -142,8 +142,11 @@
   margin-left: 0.1rem;
   margin-right: 0.1rem;
 }
+.popover-header {
+  padding-right: 1.5rem;
+}
 .popoverclose {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -0.25rem;
+  right: -0.25rem;
 }
